# rust-cli-template

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  setup.sh
.github/: pull_request_template.md
.github/workflows/: ci.yaml
src/: cli.rs  files.rs  html.rs  main.rs  markdown.rs
