[package]
name = "rust_cli_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["cargo", "derive"] }
html2md = "0.2.14"
reqwest = { version = "0.11.24", features = ["blocking"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "symbols"

[dev-dependencies]
tempfile = "3.10.1"
